--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.65.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.7.0"
+    "react-native-screens": "^3.7.0",
+    "react-native-snackbar": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.15.5",
