--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-snackbar": "^2.4.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-redux": "^7.2.5",
-    "redux": "^4.1.1"
+    "redux": "^4.1.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.15.5",
