--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.0.7",
     "axios": "^0.22.0",
     "react": "17.0.2",
+    "react-moment": "^1.1.1",
     "react-native": "0.65.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.2",
